Ejercicios/TP2-/TP2/src/ar/edu/ubp/tc/tp1juarezParser.java
// Generated from C:\Users\mauroandres\Documents\NetBeansProjects\TP1Juarez\src\ar\edu\u005Cubp\tc\tp1juarez.g4 by ANTLR 4.5.3
package ar.edu.ubp.tc;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tp1juarezParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, TFLOAT=2, TINT=3, TCHAR=4, TDOUBLE=5, IF=6, FOR=7, WHILE=8, VOID=9, 
		RETURN=10, COLON=11, SEMICOLON=12, LPAREN=13, RPAREN=14, LBRACKET=15, 
		RBRACKET=16, LBRACE=17, RBRACE=18, PLUS=19, LESS=20, DIVIDE=21, MULTIPLY=22, 
		AND=23, OR=24, ASIGN=25, EQUALS=26, DIF=27, SMALLEREQ=28, HIGHEREQ=29, 
		SMALLER=30, HIGHER=31, INT=32, FLOAT=33, ID=34;
	public static final int
		RULE_vtype = 0, RULE_val = 1, RULE_dec = 2, RULE_ftype = 3, RULE_arg = 4, 
		RULE_ret = 5, RULE_func = 6, RULE_condition = 7, RULE_conditions = 8, 
		RULE_ifc = 9, RULE_forc = 10, RULE_whilec = 11, RULE_operator = 12, RULE_operation = 13, 
		RULE_operations = 14, RULE_ops = 15, RULE_code = 16, RULE_cblock = 17, 
		RULE_instr = 18, RULE_instruction = 19;
	public static final String[] ruleNames = {
		"vtype", "val", "dec", "ftype", "arg", "ret", "func", "condition", "conditions", 
		"ifc", "forc", "whilec", "operator", "operation", "operations", "ops", 
		"code", "cblock", "instr", "instruction"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'float'", "'int'", "'char'", "'double'", "'if'", "'for'", 
		"'while'", "'void'", "'return'", "','", "';'", "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "'+'", "'-'", "'/'", "'*'", "'&&'", "'||'", "'='", "'=='", 
		"'!='", "'<='", "'>='", "'<'", "'>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "TFLOAT", "TINT", "TCHAR", "TDOUBLE", "IF", "FOR", "WHILE", 
		"VOID", "RETURN", "COLON", "SEMICOLON", "LPAREN", "RPAREN", "LBRACKET", 
		"RBRACKET", "LBRACE", "RBRACE", "PLUS", "LESS", "DIVIDE", "MULTIPLY", 
		"AND", "OR", "ASIGN", "EQUALS", "DIF", "SMALLEREQ", "HIGHEREQ", "SMALLER", 
		"HIGHER", "INT", "FLOAT", "ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tp1juarez.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tp1juarezParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class VtypeContext extends ParserRuleContext {
		public TerminalNode TINT() { return getToken(tp1juarezParser.TINT, 0); }
		public TerminalNode TFLOAT() { return getToken(tp1juarezParser.TFLOAT, 0); }
		public TerminalNode TCHAR() { return getToken(tp1juarezParser.TCHAR, 0); }
		public TerminalNode TDOUBLE() { return getToken(tp1juarezParser.TDOUBLE, 0); }
		public VtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vtype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).enterVtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).exitVtype(this);
		}
	}

	public final VtypeContext vtype() throws RecognitionException {
		VtypeContext _localctx = new VtypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_vtype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TFLOAT) | (1L << TINT) | (1L << TCHAR) | (1L << TDOUBLE))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(tp1juarezParser.FLOAT, 0); }
		public TerminalNode INT() { return getToken(tp1juarezParser.INT, 0); }
		public TerminalNode ID() { return getToken(tp1juarezParser.ID, 0); }
		public ValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_val; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).enterVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).exitVal(this);
		}
	}

	public final ValContext val() throws RecognitionException {
		ValContext _localctx = new ValContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_val);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << ID))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecContext extends ParserRuleContext {
		public VtypeContext vtype() {
			return getRuleContext(VtypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(tp1juarezParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(tp1juarezParser.ID, i);
		}
		public TerminalNode LBRACKET() { return getToken(tp1juarezParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(tp1juarezParser.RBRACKET, 0); }
		public TerminalNode INT() { return getToken(tp1juarezParser.INT, 0); }
		public List<TerminalNode> MULTIPLY() { return getTokens(tp1juarezParser.MULTIPLY); }
		public TerminalNode MULTIPLY(int i) {
			return getToken(tp1juarezParser.MULTIPLY, i);
		}
		public List<TerminalNode> ASIGN() { return getTokens(tp1juarezParser.ASIGN); }
		public TerminalNode ASIGN(int i) {
			return getToken(tp1juarezParser.ASIGN, i);
		}
		public List<ValContext> val() {
			return getRuleContexts(ValContext.class);
		}
		public ValContext val(int i) {
			return getRuleContext(ValContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(tp1juarezParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(tp1juarezParser.COLON, i);
		}
		public DecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).enterDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).exitDec(this);
		}
	}

	public final DecContext dec() throws RecognitionException {
		DecContext _localctx = new DecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			vtype();
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(45);
				match(ID);
				setState(64);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(48);
					_la = _input.LA(1);
					if (_la==ASIGN) {
						{
						setState(46);
						match(ASIGN);
						setState(47);
						val();
						}
					}

					}
					break;
				case 2:
					{
					setState(60); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(52);
						_la = _input.LA(1);
						if (_la==ASIGN) {
							{
							setState(50);
							match(ASIGN);
							setState(51);
							val();
							}
						}

						setState(54);
						match(COLON);
						setState(55);
						match(ID);
						setState(58);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
						case 1:
							{
							setState(56);
							match(ASIGN);
							setState(57);
							val();
							}
							break;
						}
						}
						}
						setState(62); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==COLON || _la==ASIGN );
					}
					break;
				}
				}
				break;
			case 2:
				{
				setState(66);
				match(ID);
				setState(67);
				match(LBRACKET);
				setState(69);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(68);
					match(INT);
					}
				}

				setState(71);
				match(RBRACKET);
				}
				break;
			case 3:
				{
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(72);
					match(MULTIPLY);
					}
					}
					setState(75); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==MULTIPLY );
				setState(77);
				match(ID);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FtypeContext extends ParserRuleContext {
		public VtypeContext vtype() {
			return getRuleContext(VtypeContext.class,0);
		}
		public TerminalNode VOID() { return getToken(tp1juarezParser.VOID, 0); }
		public FtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ftype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).enterFtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).exitFtype(this);
		}
	}

	public final FtypeContext ftype() throws RecognitionException {
		FtypeContext _localctx = new FtypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ftype);
		try {
			setState(82);
			switch (_input.LA(1)) {
			case TFLOAT:
			case TINT:
			case TCHAR:
			case TDOUBLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				vtype();
				}
				break;
			case VOID:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tp1juarezParser.ID, 0); }
		public TerminalNode COLON() { return getToken(tp1juarezParser.COLON, 0); }
		public ArgContext arg() {
			return getRuleContext(ArgContext.class,0);
		}
		public FtypeContext ftype() {
			return getRuleContext(FtypeContext.class,0);
		}
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).exitArg(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arg);
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				match(ID);
				setState(86);
				match(COLON);
				setState(87);
				arg();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				ftype();
				setState(89);
				match(ID);
				setState(90);
				match(COLON);
				setState(91);
				arg();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				ftype();
				setState(94);
				match(ID);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(96);
				ftype();
				setState(97);
				match(COLON);
				setState(98);
				arg();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(100);
				ftype();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RetContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(tp1juarezParser.RETURN, 0); }
		public ValContext val() {
			return getRuleContext(ValContext.class,0);
		}
		public RetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ret; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).enterRet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).exitRet(this);
		}
	}

	public final RetContext ret() throws RecognitionException {
		RetContext _localctx = new RetContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ret);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(RETURN);
			setState(105);
			val();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tp1juarezParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(tp1juarezParser.LPAREN, 0); }
		public ArgContext arg() {
			return getRuleContext(ArgContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(tp1juarezParser.RPAREN, 0); }
		public FtypeContext ftype() {
			return getRuleContext(FtypeContext.class,0);
		}
		public CblockContext cblock() {
			return getRuleContext(CblockContext.class,0);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).exitFunc(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TFLOAT) | (1L << TINT) | (1L << TCHAR) | (1L << TDOUBLE) | (1L << VOID))) != 0)) {
				{
				setState(107);
				ftype();
				}
			}

			setState(110);
			match(ID);
			setState(111);
			match(LPAREN);
			setState(112);
			arg();
			setState(113);
			match(RPAREN);
			setState(115);
			_la = _input.LA(1);
			if (_la==LBRACE) {
				{
				setState(114);
				cblock();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public List<ValContext> val() {
			return getRuleContexts(ValContext.class);
		}
		public ValContext val(int i) {
			return getRuleContext(ValContext.class,i);
		}
		public TerminalNode EQUALS() { return getToken(tp1juarezParser.EQUALS, 0); }
		public TerminalNode DIF() { return getToken(tp1juarezParser.DIF, 0); }
		public TerminalNode SMALLEREQ() { return getToken(tp1juarezParser.SMALLEREQ, 0); }
		public TerminalNode SMALLER() { return getToken(tp1juarezParser.SMALLER, 0); }
		public TerminalNode HIGHER() { return getToken(tp1juarezParser.HIGHER, 0); }
		public TerminalNode HIGHEREQ() { return getToken(tp1juarezParser.HIGHEREQ, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			val();
			setState(124);
			switch (_input.LA(1)) {
			case EQUALS:
				{
				setState(118);
				match(EQUALS);
				}
				break;
			case DIF:
				{
				setState(119);
				match(DIF);
				setState(120);
				match(SMALLEREQ);
				}
				break;
			case SMALLER:
				{
				setState(121);
				match(SMALLER);
				}
				break;
			case HIGHER:
				{
				setState(122);
				match(HIGHER);
				}
				break;
			case HIGHEREQ:
				{
				setState(123);
				match(HIGHEREQ);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(126);
			val();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionsContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(tp1juarezParser.LPAREN, 0); }
		public List<ConditionsContext> conditions() {
			return getRuleContexts(ConditionsContext.class);
		}
		public ConditionsContext conditions(int i) {
			return getRuleContext(ConditionsContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(tp1juarezParser.RPAREN, 0); }
		public TerminalNode AND() { return getToken(tp1juarezParser.AND, 0); }
		public TerminalNode OR() { return getToken(tp1juarezParser.OR, 0); }
		public TerminalNode LBRACE() { return getToken(tp1juarezParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(tp1juarezParser.RBRACE, 0); }
		public TerminalNode LBRACKET() { return getToken(tp1juarezParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(tp1juarezParser.RBRACKET, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public ConditionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).enterConditions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).exitConditions(this);
		}
	}

	public final ConditionsContext conditions() throws RecognitionException {
		ConditionsContext _localctx = new ConditionsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_conditions);
		int _la;
		try {
			setState(158);
			switch (_input.LA(1)) {
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				match(LPAREN);
				setState(129);
				conditions();
				setState(130);
				match(RPAREN);
				setState(132);
				_la = _input.LA(1);
				if (_la==AND || _la==OR) {
					{
					setState(131);
					_la = _input.LA(1);
					if ( !(_la==AND || _la==OR) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
				}

				setState(134);
				conditions();
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(LBRACE);
				setState(137);
				conditions();
				setState(138);
				match(RBRACE);
				setState(140);
				_la = _input.LA(1);
				if (_la==AND || _la==OR) {
					{
					setState(139);
					_la = _input.LA(1);
					if ( !(_la==AND || _la==OR) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
				}

				setState(142);
				conditions();
				}
				break;
			case LBRACKET:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				match(LBRACKET);
				setState(145);
				conditions();
				setState(146);
				match(RBRACKET);
				setState(148);
				_la = _input.LA(1);
				if (_la==AND || _la==OR) {
					{
					setState(147);
					_la = _input.LA(1);
					if ( !(_la==AND || _la==OR) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
				}

				setState(150);
				conditions();
				}
				break;
			case INT:
			case FLOAT:
			case ID:
				enterOuterAlt(_localctx, 4);
				{
				setState(152);
				condition();
				setState(155);
				_la = _input.LA(1);
				if (_la==AND || _la==OR) {
					{
					setState(153);
					_la = _input.LA(1);
					if ( !(_la==AND || _la==OR) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					setState(154);
					conditions();
					}
				}

				}
				break;
			case RPAREN:
			case RBRACKET:
			case RBRACE:
				enterOuterAlt(_localctx, 5);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfcContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(tp1juarezParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(tp1juarezParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(tp1juarezParser.RPAREN, 0); }
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public ValContext val() {
			return getRuleContext(ValContext.class,0);
		}
		public InstrContext instr() {
			return getRuleContext(InstrContext.class,0);
		}
		public CblockContext cblock() {
			return getRuleContext(CblockContext.class,0);
		}
		public IfcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).enterIfc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).exitIfc(this);
		}
	}

	public final IfcContext ifc() throws RecognitionException {
		IfcContext _localctx = new IfcContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(IF);
			setState(161);
			match(LPAREN);
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(162);
				conditions();
				}
				break;
			case 2:
				{
				setState(163);
				val();
				}
				break;
			}
			setState(166);
			match(RPAREN);
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				{
				setState(167);
				instr();
				}
				break;
			case 2:
				{
				setState(168);
				cblock();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForcContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(tp1juarezParser.FOR, 0); }
		public TerminalNode LPAREN() { return getToken(tp1juarezParser.LPAREN, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(tp1juarezParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(tp1juarezParser.SEMICOLON, i);
		}
		public TerminalNode RPAREN() { return getToken(tp1juarezParser.RPAREN, 0); }
		public List<InstrContext> instr() {
			return getRuleContexts(InstrContext.class);
		}
		public InstrContext instr(int i) {
			return getRuleContext(InstrContext.class,i);
		}
		public CblockContext cblock() {
			return getRuleContext(CblockContext.class,0);
		}
		public ForcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).enterForc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tp1juarezListener ) ((tp1juarezListener)listener).exitForc(this);
		}
	}

	public final ForcContext forc() throws RecognitionException {
		ForcContext _localctx = new ForcContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_forc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(FOR);
			setState(172);
			match(LPAREN);
			setState(174);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TFLOAT) | (1L << TINT) | (1L << TCHAR) | (1L << TDOUBLE) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << VOID) | (1L << RETURN) | (1L << INT) | (1L << FLOAT) | (1L << ID))) != 0)) {
				{
				setState(173);
				instr();
				}
			}

			setState(176);
			match(SEMICOLON);
			setState(178);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TFLOAT) | (1L << TINT) | (1L << TCHAR) | (1L << TDOUBLE) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << VOID) | (1L << RETURN) | (1L << INT) | (1L << FLOAT) | (1L << ID))) != 0)) {
				{
				setState(177);
				instr();
				}
			}

			setState(180);
			match(SEMICOLON);
			setState(182);
			_la = _input.LA(1);
